--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -16,13 +16,13 @@
 		<label style="width: 90%;">
 			Name<br />
 			<InputText ValueExpression="@(() => CarData.Car.Name)" Value="@CarData.Car.Name" ValueChanged="@((string value) => HandleOnChange(value, "Name"))"
-				class="form-control" style="width: 100%;" ></InputText>
+			class="form-control" style="width: 100%;" ></InputText>
 			<ValidationMessage For="@(() => CarData.Car.Name)" />
 		</label><br /><br />
 		<label style="width: 90%;">
 			Color<br />
 			<InputSelect ValueExpression="@(() => CarData.Car.ColorId)" Value="@CarData.Car.ColorId" ValueChanged="@((int value) => HandleOnChange(value, "Color"))"
-						 class="form-control" style="width: 100%;">
+			class="form-control" style="width: 100%;">
 				@if (CarData?.Colors != null)
 				{
 					@foreach (var color in CarData.Colors)
@@ -36,12 +36,12 @@
 		<label style="width: 90%;">
 			Year<br />
 			<InputText ValueExpression="@(() => CarData.Car.Year)" Value="@CarData.Car.Year" ValueChanged="@((string value) => HandleOnChange(value, "Year"))"
-				class="form-control" style="width: 100%;"></InputText>
+			class="form-control" style="width: 100%;"></InputText>
 		</label><br /><br />
 		<label style="width: 90%;">
 			Model<br />
 			<InputSelect ValueExpression="@(() => CarData.Car.ModelId)" Value="@CarData.Car.ModelId" ValueChanged="@((int value) => HandleOnChange(value, "Model"))"
-				class="form-control" style="width: 100%;">
+			class="form-control" style="width: 100%;">
 				@if (CarData?.Models != null)
 				{
 					@foreach (var model in CarData.Models)
@@ -55,40 +55,40 @@
 		<label style="width: 90%;">
 			Quanity<br />
 			<InputText ValueExpression="@(() => CarData.Car.Quantity)" Value="@CarData.Car.Quantity" ValueChanged="@((string value) => HandleOnChange(value, "Quantity"))"
-				class="form-control" style="width: 100%;"></InputText>
+			class="form-control" style="width: 100%;"></InputText>
 			<ValidationMessage For="@(() => CarData.Car.Quantity)" />
 		</label><br /><br />
 		<button @onclick="@(() => CarData = new())" class="btn btn-secondary" tabindex="0" style="float:left;">Cancel</button>
 	</div>
 	<div style="width: 50%; float:left;">
-		 <label style="width: 90%;">
+		<label style="width: 90%;">
 			Release Date<br />
-		<InputDate ValueExpression="@(() => CarData.Car.ReleaseDate)" Value="@CarData.Car.ReleaseDate" ValueChanged="@((DateTime? value) => HandleOnChange(value, "ReleaseDate"))"
-				class="form-control" style="width: 100%;" placeholder="Release Date"></InputDate>
-				
+			<InputDate ValueExpression="@(() => CarData.Car.ReleaseDate)" Value="@CarData.Car.ReleaseDate" ValueChanged="@((DateTime? value) => HandleOnChange(value, "ReleaseDate"))"
+			class="form-control" style="width: 100%;" placeholder="Release Date"></InputDate>
+
 		</label><br /><br />
 		<label style="width: 90%;">
 			Last Available Date<br />
 			<InputDate ValueExpression="@(() => CarData.Car.LastAvailableDate)" Value="@CarData.Car.LastAvailableDate" ValueChanged="@((DateTime? value) => HandleOnChange(value, "LastAvailableDate"))"
-				class="form-control" style="width: 100%;"></InputDate>
+			class="form-control" style="width: 100%;"></InputDate>
 			<ValidationMessage For="@(() => CarData.Car.LastAvailableDate)" />
 		</label><br /><br />
 		<label style="width: 90%;">
 			Total<br />
 			<InputText ValueExpression="@(() => CarData.Car.Total)" Value="@CarData.Car.Total" ValueChanged="@((string value) => HandleOnChange(value, "Total"))"
-				class="form-control" style="width: 100%;"></InputText>
+			class="form-control" style="width: 100%;"></InputText>
 			<ValidationMessage For="@(() => CarData.Car.Total)" />
 		</label><br /><br />
 		<label style="width: 90%;">
 			Owner<br />
 			<InputText ValueExpression="@(() => CarData.Car.Owner)" Value="@CarData.Car.Owner" ValueChanged="@((string value) => HandleOnChange(value, "Owner"))"
-				class="form-control" style="width: 100%;"></InputText>
+			class="form-control" style="width: 100%;"></InputText>
 			<ValidationMessage For="@(() => CarData.Car.Owner)" />
 		</label><br /><br />
 		<label style="width: 90%;">
 			Status<br />
 			<InputSelect ValueExpression="@(() => CarData.Car.StatusId)" Value="@CarData.Car.StatusId" ValueChanged="@((int value) => HandleOnChange(value, "Status"))"
-					class="form-control" style="width: 100%;">
+			class="form-control" style="width: 100%;">
 				@if (CarData?.Statuses != null)
 				{
 					@foreach (var status in CarData.Statuses)
@@ -187,7 +187,7 @@
 
 				break;
 
-				case "ReleaseDate":
+			case "ReleaseDate":
 				DateTime releaseDateValue = Convert.ToDateTime(value.ToString());
 				isValid = IsValidReleaseDate(releaseDateValue);
 
@@ -202,7 +202,7 @@
 
 				break;
 
-				case "LastAvailableDate":
+			case "LastAvailableDate":
 				DateTime lastAvailableDateValue = Convert.ToDateTime(value.ToString());
 				isValid = IsValidLastAvailableDate(lastAvailableDateValue);
 
@@ -216,7 +216,7 @@
 				}
 				break;
 
-				case "Total":
+			case "Total":
 				string totalValue = value.ToString();
 				isValid = IsValidTotal(totalValue);
 
@@ -230,7 +230,7 @@
 				}
 				break;
 
-				case "Owner":
+			case "Owner":
 				string ownerValue = value.ToString();
 				isValid = IsValidOwner(ownerValue);
 
@@ -244,7 +244,7 @@
 				}
 				break;
 
-				case "Status":
+			case "Status":
 				int statusValue = Int32.Parse(value.ToString());
 				isValid = IsValidStatus(statusValue);
 
@@ -259,9 +259,9 @@
 				break;
 		}
 
-		
+
 		SendCarData(CarData.Car);
-		
+
 
 		return validationResult;
 	}
@@ -277,7 +277,7 @@
 
 		if (errors.Any())
 		{
-			
+
 		}
 		else
 		{
@@ -300,7 +300,7 @@
 
 	protected void SendCarData(Car car)
 	{
-
+		var f = car;
 
 	}
 
