--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using System.ComponentModel.DataAnnotations;
 @using DataEntryDemo.Utils.Attributes;
 
-@inject PlaywrightService PlaywrightService
+@inject PlaywrightService PlaywrightService 
 <PageTitle>Data Entry Demo</PageTitle>
 <h2>Enter Details</h2>
 
@@ -105,7 +105,8 @@
 
 
 @code {
-	public CarModel? CarData { get; set; }
+	// public PlaywrightService playwrightService { get; set; } = new PlaywrightService();
+	public CarModel? CarData { get; set; } = new CarModel();
 	public bool ValidSubmit { get; set; } = false;
 
 	protected async Task<ValidationResult> HandleOnChange(object value, string controlId = "")
@@ -293,22 +294,16 @@
 	}
 
 	protected void OnHandleInvalidSubmit()
-	{
-
-
-	}
+	{	}
 
 	protected async Task SendCarData(Index.Car car)
 	{
 		var f = car;
-		await PlaywrightService.FillInFormAsync(car);
+		await PlaywrightService.PerformAutomationStepsAsync();
 	}
 
 	protected void Cancel()
-	{
-
-
-	}
+	{	}
 	protected async override Task OnInitializedAsync()
 	{
 		CarData = new CarModel();
@@ -319,12 +314,14 @@
 		base.OnInitialized();
 	}
 	protected async override Task OnAfterRenderAsync(bool firstRender)
-	{
-		await PlaywrightService.InitializeBrowserAsync();
+	{if (firstRender){
+			await PlaywrightService.PerformAutomationStepsAsync();
+		//	await PlaywrightService.InitializeBrowserAsync();
+	}
 	//	await PlaywrightService.PerformManualLoginAsync("https://acc3inter01.pegalabs.io/prweb/...");
 
-	await PlaywrightService.NavigateAndLoginAsync("https://acc3inter01.pegalabs.io/prweb/...", "wesley.reitz@acc3int.com", "Install@1234");
-		await PlaywrightService.NavigateToDataFormAsync();
+	//await PlaywrightService.NavigateAndLoginAsync("https://acc3inter01.pegalabs.io/prweb/...", "wesley.reitz@acc3int.com", "Install@1234");
+//		await PlaywrightService.NavigateToDataFormAsync();
 
 	}
 
