moving classes from index to data folder

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 
 @using System.ComponentModel.DataAnnotations;
+@using DataEntryDemo.Data
 @using DataEntryDemo.Utils.Attributes;
 
 @inject PlaywrightService PlaywrightService 
@@ -296,7 +297,7 @@
 	protected void OnHandleInvalidSubmit()
 	{	}
 
-	protected async Task SendCarData(Index.Car car)
+	protected async Task SendCarData(Car car)
 	{
 		var f = car;
 		await PlaywrightService.PerformAutomationStepsAsync();
@@ -448,63 +449,63 @@
 	}
 
 
-	public class CarModel
-	{
-		[Required]
-		public Car? Car { set; get; } = new Car();
-		public List<Color>? Colors { set; get; } = new List<Color>();
-		public List<Model>? Models { set; get; } = new List<Model>();
-		public List<Status>? Statuses { set; get; } = new List<Status>();
-	}
+	// public class CarModel
+	// {
+	// 	[Required]
+	// 	public Car? Car { set; get; } = new Car();
+	// 	public List<Color>? Colors { set; get; } = new List<Color>();
+	// 	public List<Model>? Models { set; get; } = new List<Model>();
+	// 	public List<Status>? Statuses { set; get; } = new List<Status>();
+	// }
 
-	public class Car
-	{
-		[Required]
-		public string Name { set; get; } = "";
-		[Required]
-		[Range(1, 5)]
-		public int ColorId { set; get; } = 0;
-		[Required]
-		[Range(2000, 2025)]
-		public string? Year { set; get; } = null;
-		[Required]
-		[Range(1, 5)]
-		public int ModelId { set; get; } = 0;
-		[Required]
-		[Range(1, 10)]
-		public string? Quantity { set; get; } = null;
-		[Required]
-		[DataType(DataType.DateTime)]
-		[DateMustBeBefore(nameof(LastAvailableDate))]
-		public DateTime? ReleaseDate { set; get; }
-		[Required]
-		[DateMustBeAfter(nameof(ReleaseDate))]
-		[DataType(DataType.DateTime)]
-		public DateTime? LastAvailableDate { set; get; }
-		[Required]
-		public string? Total { set; get; } = null;
-		[Required]
-		public string? Owner { set; get; } = null;
-		[Required]
-		[Range(1, 5)]
-		public int StatusId { set; get; } = 0;
-	}
+	// public class Car
+	// {
+	// 	[Required]
+	// 	public string Name { set; get; } = "";
+	// 	[Required]
+	// 	[Range(1, 5)]
+	// 	public int ColorId { set; get; } = 0;
+	// 	[Required]
+	// 	[Range(2000, 2025)]
+	// 	public string? Year { set; get; } = null;
+	// 	[Required]
+	// 	[Range(1, 5)]
+	// 	public int ModelId { set; get; } = 0;
+	// 	[Required]
+	// 	[Range(1, 10)]
+	// 	public string? Quantity { set; get; } = null;
+	// 	[Required]
+	// 	[DataType(DataType.DateTime)]
+	// 	[DateMustBeBefore(nameof(LastAvailableDate))]
+	// 	public DateTime? ReleaseDate { set; get; }
+	// 	[Required]
+	// 	[DateMustBeAfter(nameof(ReleaseDate))]
+	// 	[DataType(DataType.DateTime)]
+	// 	public DateTime? LastAvailableDate { set; get; }
+	// 	[Required]
+	// 	public string? Total { set; get; } = null;
+	// 	[Required]
+	// 	public string? Owner { set; get; } = null;
+	// 	[Required]
+	// 	[Range(1, 5)]
+	// 	public int StatusId { set; get; } = 0;
+	// }
 
-	public class Color
-	{
-		public int Id { set; get; }
-		public string? Description { set; get; }
-	}
+	// public class Color
+	// {
+	// 	public int Id { set; get; }
+	// 	public string? Description { set; get; }
+	// }
 
-	public class Model
-	{
-		public int Id { set; get; }
-		public string? Description { set; get; }
-	}
+	// public class Model
+	// {
+	// 	public int Id { set; get; }
+	// 	public string? Description { set; get; }
+	// }
 
-	public class Status
-	{
-		public int Id { set; get; }
-		public string? Description { set; get; }
-	}
+	// public class Status
+	// {
+	// 	public int Id { set; get; }
+	// 	public string? Description { set; get; }
+	// }
 }
